# Training-Optimization

./: .gitignore  README.md  pyproject.toml
examples/: README.md  sample_activities.csv
src/training_optimization/: __init__.py  cli.py
src/training_optimization/integrations/: __init__.py  obsidian.py  weather.py
src/training_optimization/models/: __init__.py  activity.py  fitness_state.py  readiness.py  training_load.py
src/training_optimization/optimizers/: __init__.py  race_predictor.py  workout_recommender.py
src/training_optimization/parsers/: __init__.py  fit_parser.py  manual_log.py  strava_export.py
src/training_optimization/programs/: __init__.py  markdown_renderer.py  triathlon.py
tests/: test_fitness_state.py  test_manual_log.py  test_readiness.py  test_training_load.py  test_workout_recommender.py
